Version 3.1.2
-------------
- Android changes for SDK30, see [the android developers notice](https://android-developers.googleblog.com/2020/07/preparing-your-build-for-package-visibility-in-android-11.html).
- Updates common dependency to 3.0.6
    * Provides Android 11 support fixes; see common@3.0.6 changelog for details.

Version 3.1.1
-------------
- Fix ADAL/1073 - Explicitly disable Content Provider access from WebViews
- Fix ADAL/1074 - Set WebSettings#setAllowFileAccess(false)
- Fix ADAL/1354 - Close FileInputStream in getVersionProps in version_tasks.gradle
- Clear the MSAL cache replica if the ADAL cache is cleared

Version 3.1.0
-------------
- Save tokens in cache for AcquireTokenByRefreshToken API (if resource and openid scope provided)
- Changes to acquire token via SAML assertion

Version 3.0.2
-------------
- Returns idToken with a silent broker response (msal#997)

Version 3.0.1
-------------
- Adding dual screen support for Surface Duo.
  * Please exclude classes under "com.microsoft.device.display" in your proguard file.
  * For apps that would like to include their own copy of Surface Duo SDK, please exclude the SDK inside ADAL as follows.
    implementation ("com.microsoft.aad:adal:3.0.1") {
        exclude group: 'com.microsoft.device.display'
    }
- Return ADALError.MDM_REQUIRED after the user interacts with MDM link.
- Adds support for multiple IdToken lookups in a single call when dual stacking with FoCi (common#871)

Version 3.0.0
-------------
- Bumping a major version due to some versioning issue on server side with old preview builds.
- No breaking API changes on the client side, it can be treated as a bug fix release.
- Uses common version: 2.0.3
- Bugfix: Resolved ADAL/1513
    * Fixed an issue whereby the ADAL version was not sent to the /token endpoint, blocking MS-PKAP handshakes
- Bugfix: Resolved ADAL/1363
    * Resolves a common memory leak resulting from successful auth requests

Version 2.0.0
-------------